2012-06-14  Eugene Klyuchnikov  <eustas.bug@gmail.com>

        Web Inspector: Refactor message loop instrumentation.
        https://bugs.webkit.org/show_bug.cgi?id=88978

        Reviewed by Pavel Feldman.

        1) Remove "messageLoop" term
        2) Reuse WebThread::TaskObserver interface
        3) Move implementation (from embedder) to platform code.

        * chromium/public/WebThread.h:
        (TaskObserver): add "willProcessTask" method.

2012-06-13  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r120268.
        http://trac.webkit.org/changeset/120268
        https://bugs.webkit.org/show_bug.cgi?id=89060

        WebCompositor::setPerTilePaintingEnabled hits an assertion in
        DEBUG (Requested by dominicc|work on #webkit).

        * chromium/public/WebLayerTreeView.h:
        (WebCore):
        (WebKit::WebLayerTreeView::Settings::Settings):
        (Settings):

2012-06-13  Ian Vollick  <vollick@chromium.org>

        [chromium] Certain settings in CCSettings could be global
        https://bugs.webkit.org/show_bug.cgi?id=88384

        Reviewed by James Robinson.

        * chromium/public/WebLayerTreeView.h:
        (WebCore):
        (WebKit::WebLayerTreeView::Settings::Settings):
        (Settings):

2012-06-12  James Robinson  <jamesr@chromium.org>

        [chromium] Port Canvas2DLayerBridge over to WebExternalTextureLayer
        https://bugs.webkit.org/show_bug.cgi?id=88597

        Reviewed by Adrienne Walker.

        This adds two new APIs to WebExternalTextureLayer that are used by the accelerated 2d canvas path:
        - willModifyTexture() is called to indicate that a system outside the compositor's control is about to modify
        the texture backing the WebExternalTextureLayer. This indicates to the compositor that it needs to avoid
        producing more frames using this texture until it can do a full commit - either by double buffering or
        appropriate flow control.
