@@ -34,7 +34,7 @@
 
 namespace WebCore {
 class CCLayerTreeHost;
-struct CCSettings;
+struct CCLayerTreeSettings;
 }
 
 namespace WebKit {
@@ -55,9 +55,6 @@ public:
             , showPlatformLayerTree(false)
             , showPaintRects(false)
             , refreshRate(0)
-            , perTilePainting(false)
-            , partialSwapEnabled(false)
-            , threadedAnimationEnabled(false)
             , defaultTileSize(WebSize(256, 256))
             , maxUntiledLayerSize(WebSize(512, 512))
             , deviceScaleFactor(1)
@@ -70,14 +67,11 @@ public:
         bool showPlatformLayerTree;
         bool showPaintRects;
         double refreshRate;
-        bool perTilePainting;
-        bool partialSwapEnabled;
-        bool threadedAnimationEnabled;
         WebSize defaultTileSize;
         WebSize maxUntiledLayerSize;
         float deviceScaleFactor;
 #if WEBKIT_IMPLEMENTATION
-        operator WebCore::CCSettings() const;
+        operator WebCore::CCLayerTreeSettings() const;
 #endif
     };
 
