@@ -1,3 +1,15 @@
+2012-06-14  Ian Vollick  <vollick@chromium.org>
+
+        [chromium] Certain settings in CCSettings could be global
+        https://bugs.webkit.org/show_bug.cgi?id=88384
+
+        Reviewed by James Robinson.
+
+        * chromium/public/WebLayerTreeView.h:
+        (WebCore):
+        (WebKit::WebLayerTreeView::Settings::Settings):
+        (Settings):
+
 2012-06-14  Eugene Klyuchnikov  <eustas.bug@gmail.com>
 
         Web Inspector: Refactor message loop instrumentation.
